--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxt/scripts": "^0.13.0",
     "@nuxt/test-utils": "^3.19.2",
     "@nuxt/ui": "^4.0.1",
+    "@tailwindcss/vite": "^4.1.17",
     "@unhead/vue": "^2.0.19",
     "better-sqlite3": "^12.4.1",
     "eslint": "^9.38.0",
@@ -25,6 +26,9 @@
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
-    "@types/node": "^24.9.1"
+    "@types/node": "^24.9.1",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.17"
   }
 }
