--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "@nuxt/image": "^1.11.0",
     "@nuxt/scripts": "^0.13.0",
     "@nuxt/test-utils": "^3.19.2",
-    "@nuxt/ui": "^4.0.1",
+    "@nuxt/ui": "^4.2.1",
     "@tailwindcss/vite": "^4.1.17",
     "@unhead/vue": "^2.0.19",
     "better-sqlite3": "^12.4.1",
     "eslint": "^9.38.0",
+    "moment": "^2.30.1",
     "nuxt": "^4.1.3",
     "typescript": "^5.9.3",
     "vue": "^3.5.22",
